[package]
name = "unicode-utf8"
version = "0.1.2"
edition = "2021"
description = "A library that converts utf-8 bytes to a char"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["xmh0511 <970252187@qq.com>"]
repository = "https://github.com/xmh0511/char-from-utf8"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
